# Tree_Menu

./: .gitignore  pyproject.toml
configs/: .env.sample
tree_menu/: settings.py
