[tool.poetry]
name = "tree_menu"
version = "0.1.0"
description = ""
authors = ["Kutman73 <0.0000000002clash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
python-dotenv = "^1.0.0"
python-decouple = "^3.7"
psycopg2-binary = "^2.9.5"
django-jazzmin = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
